<resources>
    <string-array name="navigation_drawer_items_array">
        <item>Profile</item>
        <item>Home</item>
        <item>Change Password</item>
        <item>Logout</item>
    </string-array>
    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="app_name">Hujj Help</string>
    <string name="Labbayak">Hujj Help</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterUsername">Enter Username</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="forgotPwd">Forgot Password..?</string>
    <string name="guestUserr">Continue as Guest User..</string>
    <string name="Pwdreset">Password Re-set Page</string>
    <string name="enterEmailId">Enter E-Mail Id</string>
    <string name="enterMobile">Enter Mobile Number</string>
    <string name="enterPassportNo">Enter Passport Number</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnCancel">Cancel</string>
    <string name="or">or</string>
    <string name="toastprovince">Please select State</string>
    <string name="toastpassport">Please enter Passport Number </string>
    <string name="toastemail">Please enter Email ID</string>
    <string name="toastvalidemail">Please enter valid Email ID</string>
    <string name="toastlocation">Please enter Location Name</string>
    <string-array name="SelectLanguage">
        <item>Select Language</item>
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string name="quotes1">      Quote&#160;1:\n\n&#160;&#160;&#160;To imagine is everything, to know is nothing at all.\n\n\n
      Quote&#160;2:\n\n&#160;&#160;&#160;The return we reap from generous actions is not always evident.\n\n\n
      Quote&#160;3:\n\n&#160;&#160;&#160;Ocean: A body of water occupying about two-thirds of a world made for man - who has no gills.</string>
    <string name="quran1"> &#160;&#160;&#160;&#160;&#160;&#160;&#160;The Quran kor-ahn Arabic:
         the obligations that all Muslims must uphold. Every adult Muslim (male or female) who has the physical
          and financial means is required to travel to Mecca to perform the Hajj once in his or her lifetime.
           In Mecca, Muslims from all over the world gather in a display of faith, unity, 
           and solidarity by recreating the ritual that the prophet Muhammad performed in his last pilgrimage.
           \n\n &#160;&#160;&#160;&#160;&#160;&#160; Be sure you are ready to perform the Hajj.  The Hajj is not to be undertaken lightly or as an afterthought. 
           In ancient times, it was not uncommon for pilgrims to die during their journey to Mecca.\n\n 
           Though modern conveniences now allow millions of Muslims to quickly and safely travel to and from the holy city, the Hajj should still be approached with the seriousness and dedication of 
         these early pilgrims.</string>
    <string name="hujj1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;The Hajj (pilgrimage to Mecca) is one of the five pillars of Islam,
         the obligations that all Muslims must uphold. Every adult Muslim (male or female) who has the physical
          and financial means is required to travel to Mecca to perform the Hajj once in his or her lifetime.
           In Mecca, Muslims from all over the world gather in a display of faith, unity, 
           and solidarity by recreating the ritual that the prophet Muhammad performed in his last pilgrimage.
           \n\n &#160;&#160;&#160;&#160;&#160;&#160; Be sure you are ready to perform the Hajj.  The Hajj is not to be undertaken lightly or as an afterthought. 
           In ancient times, it was not uncommon for pilgrims to die during their journey to Mecca.\n\n 
           Though modern conveniences now allow millions of Muslims to quickly and safely travel to and from the holy city, the Hajj should still be approached with the seriousness and dedication of 
         these early pilgrims.</string>
    <string name="hujj2">Study the rituals of the Hajj, begin to clear your mind of worldly distractions, and, most importantly, be repentant for 
         past sins, which will be forgiven during your pilgrimage.\n\n
         1. As with all forms of Muslim worship, the Hajj must be undertaken with sincerity and out of a devotion to God (Allah).
         \n\n 2. The Hajj cannot be performed for the purpose of gaining worldly recognition or material gains in this life.\n\n
         The Hajj must be performed in accordance with the prophet Muhammads words and deeds as described in the Sunnah.
\n\n Decide which type of Hajj you will undertake. Muslims have three different options when it comes to performing the Hajj.
 Each offers a slightly different experience in terms of the rituals performed and the timeline of events on the pilgrimage.</string>
    <string name="hujj3">This is the most common form of pilgrimage and the one recommended 
        by the prophet Muhammad himself.Tamattu involves the pilgrim performing the rites of the minor pilgrimage ritual known as Umrah, 
        then performing the rites of the Hajj. \n\n the act of Umrah is amongst the best deeds one can perform when pleasing Allah (SWT) \n 	In the blessed month of Ramadan. 
        \n\n Pilgrims performing Tamattu are called Mutamatti. As this is the most common type of pilgrimage,
         especially for foreigners to Saudi Arabia, the rest of this guide assumes you will be performing this type of pilgrimage.
         \n\n In this option, the pilgrim performs the rites of both the Umrah and Hajj in one continuous act with no break in the middle.
          Pilgrims performing Qiran are called Qaarin.</string>
    <string name="hujj4">\n\nDESTINATION OPTIONS \n– MAKKAH FIRST \n\n  1.&#160; Less common \n \n 2.&#160; 	Perform Umrah and HAJJ first then go &#160;&#160;&#160;&#160;&#160;
         to Madina\n\n 3.&#160; 
        	You need to have a pair of Ihram wear &#160;&#160;&#160;&#160;&#160; with you for your Umrah before travel\n\n 4.&#160; 
        		Put on Ihram wear in the airport or at &#160; &#160;&#160;&#160;&#160; the last stop
        	 of your trip or before boarding the your flight to Jeddah. \n\nEvery adult Muslim (male or female) who has the physical
          and financial means is required to travel to Mecca to perform the Hajj once in his or her lifetime.
           In Mecca, Muslims from all over the world gather in a display of faith, unity, 
           and solidarity by recreating the ritual that the prophet Muhammad performed in his last pilgrimage. </string>
    <string name="hujj5"></string>
    <string name="umrah1">Introduction \n \n 	Umrah is expiation for the sins committed between it and another Umrah. (Bukhari) \n 	The act of Umrah is known to cleanse one’s soul from past committed sins. \n 	It is advised to do Umrah more than once in your lifetime so that it can act as a washing of the sins from the last time one performed Umrah. \n </string>
    <string name="umrah2">	Like HAJJ, the act of Umrah is amongst the best deeds one can perform when pleasing Allah (SWT) \n 	In the blessed month of Ramadan, the reward of performing Umrah is equal to that of performing Hajj with Prophet (S.a.a.W) \n 	Another great virtue of Umrah is that if one passes away in their journey of Umrah, the reward for them is Jannat.\n</string>
    <string name="umrah3">While leaving to perform Umrah \n \n Make Ghusl (full body wash) \n Before reaching Meeqat, the starting point of Umrah, one should enter into a state of Ihram \n \n Whatever Salah is due at the time of travel, ensure it has been prayed in full before moving out\n </string>
    <string name="umrah4">"Read 2 rakaats of Travelling Salah before going \n When going out of your house/hotel, say: \n \n Bismillahi, Tawakkaltu, 'a‐lallahi, wa laa hawla wa laa quwatta illah billah\n\n Make Talbiyah and continue making Talbiyah until you reach Kaba’h." </string>
    <string name="umrah5">“Labbayka Allaahumma labbayk, labbayka laa shareeka laka labbayk. Inna al-hamd wa’l-ni’mata laka wa’l-mulk, laa shareeka lak" \n \nHere I am, O Allaah, here I am. Here I am, You have no partner, here I am. Verily all praise and blessings are Yours, and all sovereignty, You have no partner.” </string>
    <string name="health1">HEALTH AND EMERGENCY TIPS \n \n Physical Preparation \n \n  1.Get in shape. You will walk, walk and walk some more. Some people recommend walking regularly in the weeks before Hajj to build endurance.\n 2.	Boost your immunity. Travelling from the U.S. takes a huge tolls. </string>
    <string name="health2">So indulge in fruits and veggies, especially those rich in antioxidants. Stay away from sick people as best as you can during the trip.. One friend started taking a teaspoon of honey regularly in her tea. A few people wore a surgeon’s mask throughout the trip. Although it may seem mean, don’t share your water bottles or share prayer mats.</string>
    <string name="health3">3.Pace yourself upon arrival. Try to balance between resting and making the most of your time in Makkah and Madinah.\n \n 4.	Preventive care. Take medicine as soon as you feel sick, but avoid taking antibiotics unless or until you have been diagnosed with a bacterial infection.  </string>
    <string name="health4">EMERGENCY \n \n STAPMEDE \n\n 1.	If you are in a crowd, a first and most important thing is to make yourself familiar with your surroundings and mentally notice alternate exits. No matter where you are, make sure you always know how to get out.\n</string>
    <string name="health5">2.If you find yourself in the middle of a moving crowd do not fight against the pressure, do not stand still or sit down, because you could easily get trampled.\n \n 3.	Keep your hands up by your chest, like a boxer – it gives you movement and protects your chest.</string>
    <string-array name="languages">
        <item>Select Language</item>
        <item>English</item>
        <item>ಕನ್ನಡ</item>
        <item>తెలుగు</item>
        <item>मराठी</item>
        <item>हिंदी</item>
    </string-array>
    <string-array name="usertypelist">
        <item>Select UserType</item>
        <item>Farmer</item>
        <item>Surveyor</item>
    </string-array>
    <string-array name="typeodobservation">
        <item>Select Type of Observation</item>
        <item>Threat</item>
        <item>Activity</item>
        <item>General</item>
    </string-array>
    <string-array name="obsactivitystatus">
        <item>Select Activity Status</item>
        <item>Planned</item>
        <item>Work in progress</item>
        <item>Stopped</item>
        <item>Completed</item>
    </string-array>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="newpassword">New Password</string>
    <string name="savepassword">Change Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="login">Login</string>
    <string name="GEO">Genarate GEO Lat-Long</string>
    <string name="newuser">New User</string>
    <string name="newsurveyor">New Surveyor</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="upassword"><![CDATA[Password<b><font color=#ef8b2d>*</b>]]></string>
    <string name="uconfirmpassword"><![CDATA[Confirm Password<b><font color=#ef8b2d>*</b>]]></string>
    <string name="samples">Samples</string>
    <string name="advices">Advices</string>
    <string name="profile">Profile</string>
    <string name="farms">Farms</string>
    <string name="crops">Crops</string>
    <string name="activities">Activities</string>
    <string name="randomobservations">Random\nObservations</string>
    <string name="getscheduleshome">Schedule\nObservation</string>
</resources>