<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="25sp"
        android:text="@string/Pwdreset"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enterEmailId"
        android:text="avinash@begoniainfosys.com"
        android:textSize="14sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_passportnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enterPassportNo"
        android:text="ASDGFT54KLM9"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/btn_cityok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginRight="1dp"
            android:text="@string/btnCancel" />

        <Button
            android:id="@+id/btn_ok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginLeft="1dp"
            android:onClick="btn_Submit"
            android:text="@string/btnSubmit" />

    </LinearLayout>

</LinearLayout>
