<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context="com.firstproject.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/loginbgicon1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <Spinner
        android:id="@+id/sp_language"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/SelectLanguage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Username"
            android:text="avinash@begoniainfosys.com"
            android:textColor="#FFF"
            android:textColorHint="#fff"
            android:textSize="14sp" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_below="@+id/text"
            android:layout_marginTop="-7dp"
            android:background="#FFF" />

        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:hint="Password"
            android:text="opensesame"
            android:textColor="#FFF"
            android:textColorHint="#fff"
            android:textSize="14sp" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_below="@+id/text"
            android:layout_marginTop="-7dp"
            android:background="#FFF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="40dp" >

        <Button
            android:id="@+id/signup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:background="#fff"
            android:onClick="btnClick_SignUp"
            android:text="@string/SignUp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signin"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:background="#fff"
            android:onClick="btnClick_SignIn"
            android:text="@string/SignIn"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_fajar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/or"
        android:textColor="#fff" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="@null"
        android:onClick="btn_GuestUserClicked"
        android:text="@string/guestUserr"
        android:textColor="#FFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/getpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:onClick="tvClick_ForgotPwd"
        android:text="@string/forgotPwd"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFF" />

</LinearLayout>